infrastructure/prod/argocd/argo-cd/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-cd-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-shared
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "argocd.lab.cyseclab.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argo-cd-argocd-server
          port: 80
          weight: 1
